# omega_h

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  access.cpp  access.hpp  adapt.cpp  adapt.hpp  adjacency.cpp  adjacency.hpp  algebra.cpp  algebra.hpp  algorithm.hpp  align.cpp  align.hpp  all.hpp  aniso_test.cpp  approach.cpp  approach.hpp  array.cpp  array.hpp  atomics.hpp  base64.cpp  base64.hpp  bbox.cpp  bbox.hpp  bcast.cpp  bcast.hpp  bipart.cpp  bipart.hpp  box.cpp  box.hpp  canonical_sort.cpp  check_collapse.cpp  classify.cpp  classify.hpp  coarsen.cpp  coarsen.hpp  (+171 more)
.github/workflows/: cmake.yml
aux/: do-config-jenga.sh  do-config-shannon.sh  do-config-trilinos-kokkos.sh  do-config-westley.sh  flamegraph.sh  osh_adapt.yaml
bundled/: parallel_stable_sort.h  parallel_stable_sort.hpp  pss_common.hpp
cmake/: FindGmsh.cmake  FindSimModSuite.cmake  XSDKDefaults.cmake  bob.cmake  detect_kokkos_opts.cmake  detect_trilinos_opts.cmake  gpuCleanup.cmake  osh_use_dolfin.cmake
doc/: do-config-jenga.sh  do-config-rendezvous-kokkos.sh  do-config-shannon.sh  omega_h.tex  xsdk-compatibility.md
example/: README.md
example/castle/: CMakeLists.txt  main.cpp  square.geo
example/fenics/aux/: do-config-cpp.sh
example/fenics/cpp/: CMakeLists.txt  Poisson.h  main.cpp
example/fenics/python/: poisson.py  poisson_adaptive.py
example/fenics/scripts/: do-config-omega_h.sh  do-config-pybind11.sh
example/field_on_square/: CMakeLists.txt  main.cpp  square.geo
example/gradient/: CMakeLists.txt  main.cpp  square.geo
example/laplacian/: CMakeLists.txt  main.cpp  square.geo
intel_sort/: parallel_stable_sort.hpp
meshes/: localconcave_tutorial-case1_v7.sms  localconcave_tutorial_geomsim.smd  localconcave_tutorial_mixedvol_geomsim-case1.sms  localconcave_tutorial_mixedvol_geomsim.smd  localconcave_tutorial_mixedvol_geomsim2-case1.sms  localconcave_tutorial_mixedvol_geomsim2.smd  localconcave_tutorial_mixedvol_geomsim3-case1.sms  localconcave_tutorial_mixedvol_geomsim3.smd  wedge_geomsim_match.smd  wedge_match.smd  wedge_matchZ_12elem.sms
meshes/box_3d.osh/: 0.osh  1.osh  2.osh  3.osh
meshes/box_3d_2p.osh/: 0.osh  1.osh
meshes/d3d/: d3d-coreMesh.nex  d3d-coreMesh.sms  d3d.smd
meshes/d3d/d3d-coreMesh-gold.osh/: 0.osh
meshes/d3d/d3d-coreMesh-numbered-gold.osh/: 0.osh
meshes/plate_6elem.osh/: 0.osh
meshes/unitbox_cutTriCube_1k.osh/: 0.osh
meshes/unitbox_cutTriCube_1k_2p.osh/: 0.osh  1.osh
meshes/unitbox_cutTriCube_1k_4p.osh/: 0.osh  1.osh  2.osh  3.osh
meshes/wedge_matchZ_12elem_sync.osh/: 0.osh  1.osh
meshes/wedge_matchZ_12elem_sync_2.osh/: 0.osh  1.osh
misc/: do-issue-93.sh  fenics-docker-command.sh
src/: .Omega_h_build.cpp.swp  .Omega_h_mesh.cpp.swp  1d_test.cpp  2d_conserve_test.cpp  3d_conserve_test.cpp  CMakeLists.txt  Omega_h.hpp  Omega_h_adapt.cpp  Omega_h_adapt.hpp  Omega_h_adj.cpp  Omega_h_adj.hpp  Omega_h_adjacency.cpp  Omega_h_affine.hpp  Omega_h_align.cpp  Omega_h_align.hpp  Omega_h_amr.cpp  Omega_h_amr.hpp  Omega_h_amr_topology.cpp  Omega_h_amr_topology.hpp  Omega_h_amr_transfer.cpp  Omega_h_amr_transfer.hpp  Omega_h_aniso_zz.cpp  Omega_h_aniso_zz.hpp  Omega_h_any.cpp  Omega_h_any.hpp  Omega_h_approach.cpp  Omega_h_array.cpp  Omega_h_array.hpp  Omega_h_array_default.hpp  Omega_h_array_kokkos.hpp  Omega_h_array_ops.cpp  Omega_h_array_ops.hpp  Omega_h_assemble.cpp  Omega_h_assemble.hpp  Omega_h_assoc.cpp  Omega_h_assoc.hpp  Omega_h_atomics.hpp  Omega_h_base64.cpp  Omega_h_bbox.cpp  Omega_h_bbox.hpp  (+579 more)
src/intel_sort/: parallel_stable_sort.hpp  pss_common.hpp
tpl/backward/: backward.hpp
tpl/pss/: parallel_stable_sort.hpp  pss_common.hpp
tpl/random123/: array.h  philox.h
tpl/random123/features/: clangfeatures.h  compilerfeatures.h  gccfeatures.h  iccfeatures.h  msvcfeatures.h  nvccfeatures.h  open64features.h  openclfeatures.h  pgccfeatures.h  sse.h  sunprofeatures.h  xlcfeatures.h
